trying a change for pdf

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 					<img src = "images/logo.png" width = "563.5" height =  "400">
 				</div>
 					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-1">About</a></h1>
-					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-2" href="tac.pdf">Terms and Conditions</a></h1>
-					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-3" href="pp.pdf">Privacy Policy</a></h1>
+					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-2" href="pdf/tac.pdf">Terms and Conditions</a></h1>
+					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-3" href="pdf/pp.pdf">Privacy Policy</a></h1>
 			
 			</div>
 	
