--- a/public/index.html
+++ b/public/index.html
@@ -1,46 +1,105 @@
+
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>GymBud</title>
-		<link rel='stylesheet' type='text/css' href='css/portfolio.css'/>
-		<link rel='stylesheet' type='text/css' href='css/jquery.fancybox.css'/>
-        <script type='text/javascript' src='js/prefixfree.js'></script>
-        <script type='text/javascript' src='js/jquery.js'></script>
-        <script type='text/javascript' src='js/scripts.js'></script>
-		<script src="js/jquery.slides.js"></script>
-  		<script type="text/javascript" src="js/jquery.fancybox.js"></script>
-  		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	</head>
-	<body>
-	<center>
-			
-			<div class="screen main">
-				<div style =  "margin: 0 auto">
-					<img src = "images/logo.png" width = "563.5" height =  "400">
-				</div>
-					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-1">About</a></h1>
-					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-2" href="pdf/tac.pdf" target="_blank">Terms and Conditions</a></h1>
-					<h1 style="margin-top:50px; margin-right: 60px"><a class="link link-3" href="pdf/pp.pdf" target="_blank">Privacy Policy</a></h1>
-			
-			</div>
-	
-	</center>
-	
-		
-		<div class="screen photo">
 
-			<div class="header">
-				<h6 style = "color:#3c97d3;align:bottom">ABOUT</h6>
+<head>
+	<meta charset="UTF-8">
+	
+	<title>GymBud</title>
+	
+	<link rel="stylesheet" href="css/portfolio.css">
+	
+	<script src="js/jquery.js"></script>
+	<script src="js/scroll.js"></script>
+
+</head>
+
+<body>
+
+    
+	
+<div id="demo-top-bar">
+		
+	</div>
+		<div id = "one" class="label">
+		<div id= "menu"> <center>
+			<div id = "left"><a class = "link1">gymbud</a></div>
+			<div id = "right"> 
+				<a class = "link2">About</a>
+				<a class = "link3">Features</a>
+				<a class = "link4">Contact</a>
 			</div>
-			<div id="photography">
-				<center>
-					<p> GymBud is a really cool thing made by really cool people. </p>
-				</center>
-			</div>
-			<div class="screen-end"></div>
+		</center> </div>
+
+		<div id= "bg">
+			<div id = "top"></div>
+			<div id = "bottom">gymbud</div>
 		</div>
 		
-	</body>
+		<center>
+			<a class = "link2">About</a>
+			<a class = "link3">Features</a>
+			<a class = "link4">Contact</a>
+		</center>
+		
+		<a href="http://store.apple.com/us"><img id = "app" src="images/app.png"/></a>
+		</div>
+		<div class="label">
+		<div  id="two" class = "padding"></div>
+        <h1>ABOUT</h1>
+        <div class = "text"> 
+		<h2>No one left behind.</h2>
+		Frustrated with working out alone? University studies show that working out with someone dramatically improves  your results -- we agree! Use GymBud to connect with like-minded fitness enthusiasts in your area and start having better workouts today!
+		<br><br>
+		Think of it as a Tinder for fitness. You give your fitness preferences, along with where/when you want to exercise, and GymBud generates a list of potential workout partners for you to choose. Now you never have to worry about working out solo. Meet great people and have an even greater workout!
+		<br><br>
+		<center>
+“This app is about to revolutionize the college fitness landscape” <br>
+–  Jeremy Wadowski, UCLA student and fitness enthusiast
+	</center>
+		<br><br>
+		<h2>About Us</h2>
+		We believe the biggest problem holding back students within the college fitness community is motivation. GymBud was developed by a group of friends at UCLA who found it difficult to get a time when they could work out together. And we soon realized, we aren’t the only ones experiencing this problem. 
+		<br><br>
+		We created GymBud to unite the college fitness community by making it easier to create workouts in a fun and supportive atmosphere. Given the rise of social networking services such as Facebook, Instagram,Twitter, and Tinder, our generation has become much more interconnected. And yet, the fitness space still remains socially fragmented and incohesive. We plan on changing that!
+		<br><br>
+		We all come from various athletic pursuits-- water polo, collegiate football, bodybuilding, endurance racing, and strive to live overall healthy lifestyles.  With individual backgrounds in programming, marketing, and operations, combined with a team entrepreneurial spirit, we created GymBud to make exercise fun and easy!
+
+		</div>
+        </div>
+		<div class = "label">
+		<div id = "three" class = "padding"></div>
+        <h1>FEATURES</h1>
+		<div id="slideshow">
+			<img id="pic1" src="images/ss1.jpg" alt="" class="active" />
+			<img id="pic2" src="images/ss2.jpg" alt="" />
+			<img id="pic3" src="images/ss3.jpg" alt="" />
+			<img id="pic4" src="images/ss4.jpg" alt="" />
+		</div>
+		<img id = "last" src="images/leftarrow.png"  />
+		<img id = "next" src="images/arrow.png"  />
+		
+		<div id="caption">Find fellow fitness enthusiasts with similar goals, be it a running-buddy, weightlifting spotter, or a group to play pick-up basketball with, we’ll present you with an array of local options based on your preferences.</div>
+		</div>
+		<div class = "label">
+		<div id = "four" class = "padding"></div>
+        <h1>CONTACT</h1>
+		<div class = "text">
+		<h2>Trying to Reach Us?</h2>
+		Have any questions or concerns? Feel free to email our GymBud team and we'll make sure to answer right away!
+		<br>
+			</div>
+		<center>
+		<a href="mailto:Colton@gymbudapp.com,Ben@gymbudapp.com?Subject=Hey%20GymBud%20Team!" target="_top">
+			<img id ="mail" src="images/email.png"/></a>
+		</center>
+	
+		</div>
+		<div id = "footer">
+		<a href="pdf/TERMSOFSERVICE_GymBud.pdf"class = "footer">Privacy Policy</a>
+		<a href="pdf/TERMSOFSERVICE_GymBud.pdf" class = "footer">Terms and Conditions</a>
+		</div>
+
+</body>
 
 </html>
