--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	
 	<script src="js/jquery.js"></script>
 	<script src="js/scroll.js"></script>
-
+	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
