Added real app store link

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 			<a class = "link4">Contact</a>
 		</center>
 		
-		<a href="http://store.apple.com/us"><img id = "app" src="images/app.png"/></a>
+		<a href="https://itunes.apple.com/us/app/gymbuducla/id935537048?ls=1&mt=8"><img id = "app" src="images/app.png"/></a>
 		</div>
 		<div class="label">
 		<div  id="two" class = "padding"></div>
